Ensure correct view height on mobile

--- a/layout.css
+++ b/layout.css
@@ -14,6 +14,7 @@ section {
   position: relative;
   width: 100%;
   min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
   font-family: "Merriweather", serif;
